mybatis code generator

--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -2,3 +2,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/sel
 jdbc.username=root
 jdbc.password=
+model.package=com.seventeenkouer.da.model
+dao.package=com.seventeenkouer.da.mapper
+xml.mapper.package=com.seventeenkouer.da.mapping
+target.project=src/main/java
