--- a/sel-web/pom.xml
+++ b/sel-web/pom.xml
@@ -171,6 +171,12 @@
                     </additionalConfig>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.5</version>
+            </plugin>
+
         </plugins>
 
     </build>
