--- a/sel-web/pom.xml
+++ b/sel-web/pom.xml
@@ -174,7 +174,14 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
+                <version>1.3.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.17kouer</groupId>
+                        <artifactId>common</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
