--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -4,5 +4,6 @@ jdbc.username=root
 jdbc.password=
 model.package=com.seventeenkouer.da.model
 dao.package=com.seventeenkouer.da.mapper
-xml.mapper.package=com.seventeenkouer.da.mapping
-target.project=src/main/java
+xml.mapper.package=mappings
+xml.mapper.target=E:/17kouer/da/src/main/resources
+target.project=E:/17kouer/da/src/main/java
