增加jsonView工具类，相关的对象copy类

--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -1,9 +1,10 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sel
-jdbc.username=root
-jdbc.password=
-model.package=com.seventeenkouer.da.model
-dao.package=com.seventeenkouer.da.mapper
-xml.mapper.package=mappings
-xml.mapper.target=E:/17kouer/da/src/main/resources
-target.project=E:/17kouer/da/src/main/java
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/sel
+#jdbc.username=root
+#jdbc.password=
+
+
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.1.98:3306/zd_maps_dev?characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true
+jdbc.username=dev
+jdbc.password=dev
