--- a/facade/pom.xml
+++ b/facade/pom.xml
@@ -25,5 +25,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>da</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
