--- a/sel-web/pom.xml
+++ b/sel-web/pom.xml
@@ -19,6 +19,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>facade</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>da</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
