mac 下的 mybatis code generator 配置

--- a/sel-web/src/main/resources/codeGen.properties
+++ b/sel-web/src/main/resources/codeGen.properties
@@ -1,9 +1,9 @@
 
 #mysql jdbc configuration
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.98:3306/zd_maps_dev?characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true
-jdbc.username=dev
-jdbc.password=dev
+jdbc.url=jdbc:mysql://localhost:3306/sel
+jdbc.username=root
+jdbc.password=
 
 #白事代码包配置
 #model.package=com.seventeenkouer.da.model
@@ -17,5 +17,5 @@ jdbc.password=dev
 model.package=com.seventeenkouer.da.model
 dao.package=com.seventeenkouer.da.mapper
 xml.mapper.package=mappings
-xml.mapper.target=E:/17kouer/da/src/main/resources
-target.project=E:/17kouer/da/src/main/java
+xml.mapper.target=/Users/wind/work/code/17kouer/da/src/main/resources
+target.project=/Users/wind/work/code/17kouer/da/src/main/java
