--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -5,6 +5,6 @@
 
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.98:3306/zd_maps_dev?characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true
-jdbc.username=dev
-jdbc.password=dev
+jdbc.url=jdbc:mysql://localhost:3306/sel
+jdbc.username=root
+jdbc.password=
