--- a/facade/pom.xml
+++ b/facade/pom.xml
@@ -25,10 +25,19 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>com.17kouer</groupId>
             <artifactId>da</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>common</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
