--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -4,7 +4,7 @@
 #jdbc.password=
 
 
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/sel
 jdbc.username=root
 jdbc.password=
