--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>da</module>
         <module>facade</module>
         <module>common</module>
+        <module>wei-app</module>
     </modules>
 
 
