--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>facade</module>
         <module>common</module>
         <module>wei-app</module>
+        <module>web-ui</module>
     </modules>
 
 
