增加maven profile 机制，避免切换环境时，频繁修改配置

--- a/profile-settings/dev.properties
+++ b/profile-settings/dev.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sel
-jdbc.username=root
-jdbc.password=
+profile.jdbc.driverClassName=com.mysql.jdbc.Driver
+profile.jdbc.url=jdbc:mysql://localhost:3306/sel
+profile.jdbc.username=root
+profile.jdbc.password=root
