--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -4,7 +4,7 @@
 #jdbc.password=
 
 
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sel
-jdbc.username=root
-jdbc.password=
+jdbc.driverClassName=${profile.jdbc.driverClassName}
+jdbc.url=${profile.jdbc.url}
+jdbc.username=${profile.jdbc.username}
+jdbc.password=${profile.jdbc.password}
