将profile放置根pom，基于百度webuploader组件开发上传文件功能

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <log4J.version></log4J.version>
     </properties>
 
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -67,8 +68,23 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.1</version>
         </dependency>
-
     </dependencies>
 
-
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <env>dev</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <env>test</env>
+            </properties>
+        </profile>
+    </profiles>
 </project>
