--- a/sel-web/pom.xml
+++ b/sel-web/pom.xml
@@ -77,50 +77,13 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <env>dev</env>
-            </properties>
-        </profile>
-        <profile>
-            <id>test</id>
-            <properties>
-                <env>test</env>
-            </properties>
-        </profile>
-        <profile>
-            <id>demo</id>
-            <properties>
-                <env>demo</env>
-            </properties>
-        </profile>
-        <profile>
-            <id>jushiben</id>
-            <properties>
-                <env>jushiben</env>
-            </properties>
-        </profile>
-        <profile>
-            <id>juju</id>
-            <properties>
-                <env>juju</env>
-            </properties>
-        </profile>
-        <profile>
-            <id>zdpm</id>
-            <properties>
-                <env>zdpm</env>
-            </properties>
-        </profile>
-    </profiles>
-
 
     <build>
         <filters>
