--- a/sel-web/src/main/resources/codeGen.properties
+++ b/sel-web/src/main/resources/codeGen.properties
@@ -1,21 +1,13 @@
 
 #mysql jdbc configuration
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sel
+jdbc.url=jdbc:mysql://localhost:3306/sel?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
-
-#白事代码包配置
-#model.package=com.seventeenkouer.da.model
-#dao.package=com.seventeenkouer.da.mapper
-#xml.mapper.package=mappings
-#xml.mapper.target=D:/javacode/maps-jushi/zdnst-common/zdnst-biz/biz-model/src/main/resources
-#target.project=D:/javacode/maps-jushi/zdnst-common/zdnst-biz/biz-model/src/main/java
-
+jdbc.password=root
 
 
 model.package=com.seventeenkouer.da.model
 dao.package=com.seventeenkouer.da.mapper
 xml.mapper.package=mappings
-xml.mapper.target=/Users/wind/work/code/17kouer/da/src/main/resources
-target.project=/Users/wind/work/code/17kouer/da/src/main/java
+xml.mapper.target=E:\\17kouer\\da\\src\\main\\resources
+target.project=E:\\17kouer\\da\\src\\main\\java
