--- a/profile-settings/dev.properties
+++ b/profile-settings/dev.properties
@@ -2,3 +2,10 @@ profile.jdbc.driverClassName=com.mysql.jdbc.Driver
 profile.jdbc.url=jdbc:mysql://localhost:3306/sel?useUnicode=true&characterEncoding=UTF-8
 profile.jdbc.username=root
 profile.jdbc.password=root
+
+
+profile.model.package=com.seventeenkouer.da.model
+profile.dao.package=com.seventeenkouer.da.mapper
+profile.xml.mapper.package=mappings
+profile.xml.mapper.target=E:\\17kouer\\da\\src\\main\\resources
+profile.target.project=E:\\17kouer\\da\\src\\main\\java
