--- a/profile-settings/dev.properties
+++ b/profile-settings/dev.properties
@@ -9,3 +9,4 @@ profile.dao.package=com.seventeenkouer.da.mapper
 profile.xml.mapper.package=mappings
 profile.xml.mapper.target=E:\\17kouer\\da\\src\\main\\resources
 profile.target.project=E:\\17kouer\\da\\src\\main\\java
+profile.jdbc.file=D:\\mybatis_generate\\mysql-connector-java-5.1.25.jar
