创建dev-home环境,避免公司与家中开发时频繁切换.设置一些.iml文件脱离git管理

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
             </properties>
         </profile>
         <profile>
+            <id>dev-home</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <env>dev-home</env>
+            </properties>
+        </profile>
+        <profile>
             <id>test</id>
             <properties>
                 <env>test</env>
