增加web端登录拦截器,忽略态资源,从属性中读取上传文件路径

--- a/profile-settings/dev-home.properties
+++ b/profile-settings/dev-home.properties
@@ -3,6 +3,8 @@ profile.jdbc.url=jdbc:mysql://localhost:3306/sel?useUnicode=true&characterEncodi
 profile.jdbc.username=root
 profile.jdbc.password=
 
+profile.upload.url=/Users/wind/work/uploadfiles/
+
 
 profile.model.package=com.seventeenkouer.da.model
 profile.dao.package=com.seventeenkouer.da.mapper
