--- a/sel-web/src/main/resources/resources.properties
+++ b/sel-web/src/main/resources/resources.properties
@@ -8,3 +8,5 @@ jdbc.driverClassName=${profile.jdbc.driverClassName}
 jdbc.url=${profile.jdbc.url}
 jdbc.username=${profile.jdbc.username}
 jdbc.password=${profile.jdbc.password}
+
+upload.url=${profile.upload.url}
