--- a/sel-web/src/main/resources/codeGen.properties
+++ b/sel-web/src/main/resources/codeGen.properties
@@ -1,13 +1,28 @@
 
 #mysql jdbc configuration
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sel?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=root
-jdbc.password=root
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/sel?useUnicode=true&characterEncoding=UTF-8
+#jdbc.username=root
+#jdbc.password=root
+
+
+#model.package=com.seventeenkouer.da.model
+#dao.package=com.seventeenkouer.da.mapper
+#xml.mapper.package=mappings
+#xml.mapper.target=E:\\17kouer\\da\\src\\main\\resources
+#target.project=E:\\17kouer\\da\\src\\main\\java
+
+
+jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.url=jdbc:sqlserver://192.168.17.192:1433;DatabaseName=ivssNew
+jdbc.username=sa
+jdbc.password=@Wind1982
 
 
 model.package=com.seventeenkouer.da.model
 dao.package=com.seventeenkouer.da.mapper
 xml.mapper.package=mappings
-xml.mapper.target=E:\\17kouer\\da\\src\\main\\resources
-target.project=E:\\17kouer\\da\\src\\main\\java
+xml.mapper.target=/Users/wind/work/17kouer/da/src/main/resources
+
+target.project=/Users/wind/work/17kouer/da/src/main/java
+jdbc.file=/Users/wind/.m2/repository/com/microsoft/sqlserver/mssql-jdbc/6.4.0.jre7/mssql-jdbc-6.4.0.jre7.jar
