--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,5 +12,18 @@
     <artifactId>service</artifactId>
     <version>1.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>da</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.17kouer</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
