增加药店、巡视、陈列基础功能

--- a/sel-web/src/main/webapp/WEB-INF/web.xml
+++ b/sel-web/src/main/webapp/WEB-INF/web.xml
@@ -65,7 +65,7 @@
 
 
     <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+        <listener-class>com.seventeenkouer.web.listener.WebContextLoaderListener</listener-class>
     </listener>
 
     <context-param>
