完善全局异常处理。

--- a/profile-settings/minipro-dev-home.properties
+++ b/profile-settings/minipro-dev-home.properties
@@ -2,7 +2,7 @@ profile.jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 profile.jdbc.url=jdbc:sqlserver://192.168.1.104:1433;DatabaseName=ivssNew
 profile.jdbc.username=sa
 profile.jdbc.password=@Wind1982
-
+profile.upload.url=/Users/wind/work/uploadfiles/
 
 profile.model.package=com.seventeenkouer.da.model
 profile.dao.package=com.seventeenkouer.da.mapper
