去除缓存全部药店在服务端的方案，将计算n公里访问内的药店信息交给数据库。

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,17 @@
                 <env>minipro-dev-com</env>
             </properties>
         </profile>
+
+        <profile>
+            <id>minipro-dev-txy</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <env>minipro-dev-txy</env>
+            </properties>
+        </profile>
+
         <profile>
             <id>dev</id>
             <activation>
