文件上传后，按照日期组织文件目录

--- a/profile-settings/minipro-dev-txy.properties
+++ b/profile-settings/minipro-dev-txy.properties
@@ -2,6 +2,7 @@ profile.jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 profile.jdbc.url=jdbc:sqlserver://139.199.20.40:1433;DatabaseName=ivssNew
 profile.jdbc.username=sa
 profile.jdbc.password=eo*w(aFe#2023
+profile.upload.url=/Users/wind/work/uploadfiles/
 
 
 profile.model.package=com.seventeenkouer.da.model
