--- a/sel-web/src/main/resources/log4j.properties
+++ b/sel-web/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,A1
+log4j.rootLogger=DEBUG,A1,R
 
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
@@ -6,19 +6,24 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=[%-5p] [%d{yyyy-MM-dd HH:mm:ss.SSS}] [%c:%L] %m %n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=workflow-application.log
-log4j.appender.R.MaxFileSize=500MB
-log4j.appender.R.MaxBackupIndex=1
-
-
-#log4j.appender.R.layout=org.apache.log4j.HTMLLayout
+log4j.appender.R.File=../logs/log4j-rolling.log
+log4j.appender.R.file.DatePattern=yyyy-MM-dd-HH-mm'.log'
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%-5p] [%d{yyyy-MM-dd HH:mm:ss.SSS}] [%c:%L] %m %n
+# Pattern to output the caller's file name and line number.
+log4j.appender.R.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n[%-5p] [%d{yyyy-MM-dd HH:mm:ss.SSS}] [%c:%L] %m %n
+log4j.appender.R.MaxFileSize=100KB
+# Keep five backup file
+log4j.appender.R.MaxBackupIndex=5
 
 
-#log4j.logger.org.dozer=INFO
-#log4j.logger.org.apache.commons.beanutils.converters=INFO
+
+log4j.appender.file = org.apache.log4j.FileAppender
+log4j.appender.file.File =../logs/log4j-debug.log
+log4j.appender.file.Encoding=UTF-8
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=[%-5p] [%d{yyyy-MM-dd HH:mm:ss.SSS}] [%c:%L] %m %n
+log4j.appender.FILE.Append=true 
 
 
-#log4j.logger.org.apache.kafka.clients.consumer.internals=INFO
-#log4j.logger.org.springframework.kafka.listener=INFO
+
+
